# ping-pong

ping-pong/: .clangd  CMakeLists.txt  lightShader.frag.glsl  lightShader.vert.glsl  main.cpp  shader.cpp  shader.fs  shader.hpp  shader.vert.glsl  shader.vs  shader2.frag.glsl  shader2.fs  shader3.fs  vertexManager.cpp  vertexManager.hpp  windowManager.cpp  windowManager.hpp
ping-pong.xcodeproj/: project.pbxproj
ping-pong.xcodeproj/xcuserdata/macbookpro.xcuserdatad/xcschemes/: xcschememanagement.plist
ping-pong/.cache/clangd/index/: camera.hpp.D528F39EF6EE2D07.idx  glad.c.3E6DC55963F0745A.idx  glad.c.D8D7A082C5F1C0FC.idx  main.cpp.458C9EDF7786B84D.idx  main.cpp.B328FAEA73B62C01.idx  mesh.cpp.63B1880CF0E72A22.idx  mesh.hpp.DA97182C5B6B4EA6.idx  model.cpp.77809DFD893DD5B6.idx  model.hpp.21CF27CAE0DD8800.idx  shader.cpp.2202D1B1A791AB67.idx  shader.cpp.D0D0138DDE372A8B.idx  shader.hpp.56301CB6C956FF24.idx  shader.hpp.BF97DE743D8B56A5.idx  stb_image.cpp.C2D050C7900B11A4.idx  stb_image.cpp.FABA67E28231EB0F.idx  stb_image.h.3CA1FD6A7339C4FF.idx  std_image.cpp.E1A3E6320177742A.idx  vertexManager.cpp.77C53BA3DF173EDD.idx  vertexManager.cpp.789F045CA8342DEA.idx  vertexManager.hpp.3A2DFD6900B891B3.idx  windowManager.cpp.08DA8D36649BB1EC.idx  windowManager.cpp.110A81BC5EF605D8.idx  windowManager.hpp.1A4482C122335726.idx
